# GP2-Coursework--Art-Gallery-

./: CMakeLists.txt  READ ME!.txt
Core/: CMakeLists.txt
Core/include/: Camera.h  Common.h  Component.h  Core.h  Cube.h  DirectionalLight.h  FBXLoader.h  Font.h  GameObject.h  Input.h  Light.h  Material.h  Mesh.h  MeshRenderer.h  Plane.h  Rect.h  Scene.h  Shader.h  ShaderLoader.h  Texture.h  TextureLoader.h  Time.h  Transform.h  Vector.h  Vector3.h  Vertex.h  Vertices.h  text2D.h
Core/src/: Camera.cpp  Component.cpp  Core.cpp  FBXLoader.cpp  GameObject.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  Scene.cpp  Shader.cpp  ShaderLoader.cpp  Texture.cpp  TextureLoader.cpp  Transform.cpp  text2D.cpp
assets/models/: art_gallery.fbx
assets/shaders/: skyVS.glsl
include/: Camera.h  Common.h
src/: main.cpp
